--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.2",
     "nodemon": "^3.0.2",
+    "util": "^0.12.5",
     "validator": "^13.11.0"
   }
 }
