--- a/.env
+++ b/.env
@@ -7,3 +7,8 @@ DATABASE_PASSWORD=12345
 JWT_SECRET=HAHAHA_SIUUUU-They-Think-Im-Hiding-In-The-Shadows-But-I-Am-The-Shadows
 JWT_EXPIRES_IN=90d
 JWT_COOKIE_EXPIRES_IN=90
+
+EMAIL_USERNAME=b62f2b054f1cdd
+EMAIL_PASSWORD=c365f026c3c5e9
+EMAIL_HOST=sandbox.smtp.mailtrap.io
+EMAIL_PORT=587
