--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.2",
+    "nodemailer": "^6.9.7",
     "nodemon": "^3.0.2",
     "util": "^0.12.5",
     "validator": "^13.11.0"
